k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-oauth-server
  labels:
    app: github-oauth-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: github-oauth-server
  template:
    metadata:
      labels:
        app: github-oauth-server
    spec:
      containers:
        - name: github-oauth-server
          image: alo42/github-oauth-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources: {}
