k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: github-oauth-server
spec:
  selector:
    app: github-oauth-server
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
