k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-oauth-server
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: development.openq.dev
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: github-oauth-server
                port:
                  number: 3000
  tls:
    - hosts:
        - "*.openq.dev"
      secretName: ssl-cert
